RESOLVED FIXED107309
Fix up of ArithDiv nodes for non-x86 CPUs is broken
https://bugs.webkit.org/show_bug.cgi?id=107309
Summary Fix up of ArithDiv nodes for non-x86 CPUs is broken
Michael Saboff
Reported 2013-01-18 11:30:04 PST
The check if we need to add an Int32ToDouble node in fixDoubleEdge() doesn't check for all "integer" cases.
Attachments
Michael Saboff
Comment 1 2013-01-18 11:31:17 PST
Michael Saboff
Comment 2 2013-01-18 13:30:03 PST
Michael Saboff
Comment 3 2013-01-18 16:41:03 PST
This broke editing/selection/move-by-word-visually-multi-line.html. It fails with a release build and crashes with a debug build. Tracked in https://bugs.webkit.org/show_bug.cgi?id=107340.
Note You need to log in before you can comment on or make changes to this bug.