Fix up of ArithDiv nodes for non-x86 CPUs is broken https://bugs.webkit.org/show_bug.cgi?id=107309

Reviewed by  Filip Pizlo.

Changed the logic so that we insert an Int32ToDouble node when the existing edge is not SpecDouble.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixDoubleEdge):


Canonical link: https://commits.webkit.org/125556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140201 268f45cc-cd09-0410-ab3c-d52691b4dbfc